--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -2,14 +2,14 @@ name: Docker Image CI # workflow 이름
 
 on:
   push:
-    branches: [ master ] # master branch에 push가 발생했을 때 실행합니다
+    branches: [ master ] # master branch에 push가 발생했을 때 실행함
 
-jobs: # 이하 내용들을 jobs으로 정의합니다
+jobs: # 이하 내용들을 jobs으로 정의함
 
-  build: # 이하 내용을 build라는 이름의 job으로 정의합니다
+  build: # 이하 내용을 build라는 이름의 job으로 정의함
 
-    runs-on: ubuntu-latest # 우분투 최신 버전에서 실행됩니다.
-    if: github.repository_owner == 'MK513' # 깃허브 레포 주인이 'MK153'일때 실행합니다.
+    runs-on: ubuntu-latest # 우분투 최신 버전에서 실행됨
+    if: github.repository_owner == 'MK513' # 깃허브 레포 주인이 'MK153'일때 실행함
 
     steps: # 이하 내용들을 steps로 정의 합니다.
     - name: Checkout  # 첫번째 step 이름은 'Checkout'
@@ -22,15 +22,15 @@ jobs: # 이하 내용들을 jobs으로 정의합니다
       uses: docker/setup-buildx-action@v2 # 멀티 플랫폼 빌드에 필요한 Buildx를 설치
 
     - name: Login  # 네번째 step 이름은 'Login'
-      uses: docker/login-action@v2 # push 하기 전에 로그인
+      uses: docker/login-action@v2 # push 하기 전에 로그인함
       with:
-        username: ${{ secrets.DOCKER_USERNAME }} # 로그인 하려는 username
+        username: ${{ secrets.DOCKER_USERNAME }} # 계정의 username
         password: ${{ secrets.DOCKER_PASSWORD }} # 계정의 password
          
     - name: Build and push # 다섯번째 step 이름은 'Build and push'
-      uses: docker/build-push-action@v4 # Docker 이미지를 빌드하고 레지스트리에 푸시
+      uses: docker/build-push-action@v4 # Docker 이미지를 빌드하고 레지스트리에 push
       with:
         context: . # 현재 directory를 빌드 context로 사용
-        push: true # push 함을 true로
+        push: true # push 함을 true로 정의
         platforms: linux/amd64,linux/arm64/v8 # 지원하는 platform 정의
-        tags: amirpourmand/al-folio # docker 이미지 저장소와 이미지 이
+        tags: amirpourmand/al-folio # docker 이미지 저장소와 이름 정의
