--- a/.github/workflows/deploy-docker-tag.yml
+++ b/.github/workflows/deploy-docker-tag.yml
@@ -1,44 +1,42 @@
-name: Docker Image CI (Upload Tag)
+name: Docker Image CI (Upload Tag) # workflow 이름
 
 on:
   push:
     tags:
-      - 'v*'
+      - 'v*' # v로 시작하는 events를 push
 
-jobs:
+jobs: # 이하 내용들을 jobs으로 정의함
+  build: # 이하 내용을 build라는 이름의 job으로 정의함
 
-  build:
+    runs-on: ubuntu-latest # 우분투 최신 버전에서 실행됨
 
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+    steps: # 이하 내용들을 steps로 정의함
+    - name: Checkout  # 첫번째 step 이름은 'Checkout'
+      uses: actions/checkout@v3 # actions/checkout 액션을 사용해서 레포의 소스코드를 내려받음
       
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v2 
+    - name: Set up QEMU  # 두번째 step 이름은 'Set up QEMU'
+      uses: docker/setup-qemu-action@v2  # 멀티 플랫폼 이미지를 빌드하기 위해 필요한 QEMU를 설치
       
-    - name: Buildx
-      uses: docker/setup-buildx-action@v2
+    - name: Buildx # 세번째 step 이름은 'Buildx'
+      uses: docker/setup-buildx-action@v2 # 멀티 플랫폼 빌드에 필요한 Buildx를 설치
       
-    -
-      name: Docker meta
-      id: meta
+    - name: Docker meta # 네번째 step 이름은 'Docker meta'
+      id: meta # step 식별을 위한 id
       uses: docker/metadata-action@v4
       with:
         images: amirpourmand/al-folio
 
-    - name: Login
-      uses: docker/login-action@v2
+    - name: Login # 다섯번째 step 이름은 'Login'
+      uses: docker/login-action@v2 # push 하기 전에 로그인
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: ${{ secrets.DOCKER_USERNAME }} # 계정의 username
+        password: ${{ secrets.DOCKER_PASSWORD }} # 계정의 password
 
-    - name: Build and push
-      uses: docker/build-push-action@v3
+    - name: Build and push # 여섯번째 step 이름은 'Build and push'
+      uses: docker/build-push-action@v3 # Docker 이미지를 빌드하고 레지스트리에 푸시
       with:
-        context: .
-        platforms: linux/amd64,linux/arm64/v8
+        context: .  # 현재 directory를 빌드 context로 사용
+        platforms: linux/amd64,linux/arm64/v8 # 지원하는 platform 정의
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
